@@ -1,3 +1,5 @@
+* Avoid critical error in select_regular() if selector contains trailing commas like `div,`. [jddalton]
+
 * Add check to `RE_BUGGY_QSA` for Opera not respecting `valign` attribute value insensitivity in HTML. [jddalton]
 
 * Make compileSelector() add element node checks for selectors like `* + *` or `* ~ *`. [jddalton]
